px-sliding-gauge component - ticks and labels

--- a/demo-bug.html
+++ b/demo-bug.html
@@ -11,7 +11,7 @@
     <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
     <!-- Import custom element. Note: see comment about relative paths to dependencies in the *.html file referenced below -->
     <link rel="import" href="../px-theme/px-theme.html" />
-    <link rel="import" href="px-slider.html" />
+    <link rel="import" href="px-sliding-gauge.html" />
     <link rel="import" href="demo-nested.html" />
     <style>
       html {
