--- a/demo.html
+++ b/demo.html
@@ -11,7 +11,7 @@
 
     <!-- Import custom element. Note: see comment about relative paths to dependencies in the *.html file referenced below -->
     <link rel="import" href="../px-theme/px-theme.html" />
-    <link rel="import" href="px-slider.html" />
+    <link rel="import" href="px-sliding-gauge.html" />
     <link rel="import" href="demo-nested.html" />
     <style>
       html {
