--- a/demo-bug.html
+++ b/demo-bug.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>px-slider Demo</title>
+    <title>px-sliding-gauge Demo</title>
     <!-- Requires Webcomponents.js polyfill is provided by the page for browsers that don't support html imports -->
     <script src="../webcomponentsjs/webcomponents-lite.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
@@ -31,7 +31,7 @@
     <h4>Single Value</h4>
     <div style="width: 200px">
 
-      <h4>Demonstrate px-slider bugs</h4>
+      <h4>Demonstrate px-sliding-gauge bugs</h4>
       <template id="my-slider" is="dom-bind">
 
         <!--
