--- a/index.html
+++ b/index.html
@@ -114,7 +114,6 @@
                     <px-sliding-gauge
                       id="gauge_{{indexPlusOne(index)}}"
                       title="{{item.title}}"
-                      sub-title="{{item.subTitle}}"
                       value="{{item.value}}"
                       min="{{item.min}}"
                       max="{{item.max}}"
@@ -183,8 +182,8 @@
           "min": 0,
           "max": 120,
           "step": 1,
-          "startValue": "",
-          "endValue": "",
+//          "startValue": "",
+//          "endValue": "",
           "disabled": false,
           "hideInputs": false,
           "scale": "linear",
